# ibiRecovery

./: .cspell.json  .gitignore  .pre-commit-config.yaml  Makefile  README.md  _config.yml  export_formats.json  pyproject.toml  run_tests.py
.claude/: CLAUDE.md
.github/workflows/: test.yml.example
docs/: album_name_handling.md  api_specification.json  commit_style_guide.md  developer_guide.md  disk_analysis_methodology.md  ibi_discontinuation.md  index.md  metadata_embedding_guide.md  metadata_strategy.md  metadata_summary.md  reference_implementation.py  schema_documentation.md  version_compatibility.md
ibirecovery/: __init__.py  audit_files.py  extract_files.py
ibirecovery/core/: __init__.py  database.py  export.py  file_operations.py  orphan_filter.py  utils.py  verification.py
tests/: README.md  __init__.py  conftest.py  test_album_name_handling.py  test_backup_database.py  test_cli_interface.py  test_cross_platform.py  test_database_compatibility.py  test_database_operations.py  test_export_formats.py  test_export_functionality.py  test_extraction_integration.py  test_file_operations.py  test_main_function.py  test_metadata_correction.py  test_orphan_filter.py  test_race_conditions.py  test_reference_implementation.py  test_resumable_behavior.py  test_rsync_optimization.py  test_userstorage_file_resolution.py
